--- a/WeatherService.API/appsettings.json
+++ b/WeatherService.API/appsettings.json
@@ -5,7 +5,22 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "WeatherService.Infrastructure": "Debug",
+      "WeatherService.Infrastructure.Resilience": "Debug"
+    }
+  },
+  "Resilience": {
+    "Retry": {
+      "MaxAttempts": 3,
+      "BaseDelay": "00:00:01",
+      "MaxDelay": "00:00:05"
+    },
+    "CircuitBreaker": {
+      "FailureThreshold": 5,
+      "BreakDuration": "00:00:10"
+    },
+    "Timeout": {
+      "RequestTimeout": "00:00:10"
     }
   },
   "AllowedHosts": "*"
